WIP: Add validator editor
- Add documentation URL 
- Add (New Validator) links in helper buttons
- Add Validator editor view

--- a/app/addons/documents/assets/less/documents.less
+++ b/app/addons/documents/assets/less/documents.less
@@ -23,6 +23,7 @@
 @import "revision-browser.less";
 @import "header-docs-left.less";
 @import "partition-key.less";
+@import "validator-editor.less";
 
 
 button.beautify {
