--- a/app/addons/documents/assets/less/validator-editor.less
+++ b/app/addons/documents/assets/less/validator-editor.less
@@ -10,19 +10,29 @@
 // License for the specific language governing permissions and limitations under
 // the License.
 
-import Documents from './shared-resources';
-import DocumentsRouteObject from "./routes-documents";
-import docEditor from "./routes-doc-editor";
-import IndexEditorRouteObject from "./routes-index-editor";
-import ValidatorRouteObject from './routes-validator-editor';
-import Mango from "./routes-mango";
+@import "../../../../../assets/less/variables.less";
 
-Documents.RouteObjects = [
-  docEditor.DocEditorRouteObject,
-  DocumentsRouteObject,
-  ValidatorRouteObject,
-  IndexEditorRouteObject,
-  Mango.MangoIndexEditorAndQueryEditor
-];
+.define-validator {
+  padding: 15px;
+  .help-link {
+    margin-left: 4px;
+  }
+  .design-doc-group #new-ddoc-section {
+    margin-top: 24px;
+    label {
+      padding-top: 12px;
+    }
+  }
+}
 
-export default Documents;
+a.validator-cancel-link {
+  margin-left: 10px;
+  font-size: 14px;
+  color: #666;
+  &:hover {
+    color: @hoverHighlight;
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+
